workshop03/myapp.yaml
---
kind: Namespace
apiVersion: v1

metadata:
    name: myns
    labels:
        app: myapp
---
kind: Deployment
apiVersion: apps/v1

metadata:
    name: myapp-deploy
    namespace: myns
    labels:
        app: myapp-deploy


spec:
    replicas: 2
    selector:
      matchLabels:
        app: myapp-pod
    template:
      metadata:
          name: myapp-pod
          labels:
              app: myapp-pod
              version: v1
      spec:
        containers:
        - name: myapp
          image: stackupiss/northwind-app:v1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 100m
          ports:
          - name: myapp-port
            containerPort: 3000
---
kind: Service
apiVersion: v1

metadata:
  name: myapp-svc
  namespace: myns
  labels:
    app: myapp-svc

spec:
  type: ClusterIP
  selector:
    app: myapp-pod
  ports:
  - name: myapp-svc-ports
    port: 80
    targetPort: myapp-port
